fix: Added support for variable names with $N in it
MAPA in Reksio i Skarb Piratów works.